MFB: Fixed bug #48131 (Don't try to bind ipv4 addresses to ipv6 ips via bindto)